gl33-master/src/test/deca/syntax/invalid/others/newFausse.deca
/*
Test sur le syntaxe de new

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  boolean a = true;

  int myFunc(){
    if(a){
      print("hello");
    }
  }
}

{
  MyClass m = mew MyClass();
}
